#pragma once
class System
{
public:

	void start();

};


